# GENERATEUR-SDK

./: .gitignore  .manifest.json  PyPI_README.md  README.md  README_GENERATOR.md  SDK_GENERATOR_GUI.py  backend_generator.py  generate.py  gui_generator.py  install.cmd  install.sh  pyproject.toml  run_full_stack.py
documentation/models/: Etudiant.md  Note.md
documentation/services/: EtudiantsService.md  NotesService.md
documentation/snippets/: snippets.json
examples/: install.cmd  install.sh  sample.py
src/monprojet_sdk/: __init__.py  sdk.py  sdk_async.py
src/monprojet_sdk/models/: __init__.py  etudiant.py  note.py
src/monprojet_sdk/net/request_chain/handlers/: http_handler.py  retry_handler.py
src/monprojet_sdk/net/transport/: request.py  serializer.py
src/monprojet_sdk/services/: etudiants.py  notes.py
src/monprojet_sdk/services/async_/: etudiants.py  notes.py
src/monprojet_sdk/services/utils/: base_service.py
