[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "monprojet_sdk"
version = "1.0.0"
description = """API centralisée pour la gestion des notes, la sécurité et la détection de billets."""
readme = "PyPI_README.md"
requires-python = ">=3.9"
dependencies = [
    "requests>=2.31.0",
    "pydantic>=2.0.0,<3.0.0"
]
